--- a/pages/about.html
+++ b/pages/about.html
@@ -199,7 +199,7 @@
                                     <p>3256</p>
                                     <span>Client</span>
                                 </div>
-                                <img src="/asset/img/stastic_img1.webp" alt="Ảnh">
+                                <img src="../asset/img/stastic_img1.webp" alt="Ảnh">
                             </div>
                         </div>
                     </div>
@@ -207,7 +207,7 @@
                     <div class="row pd--18">
                         <div class="col l-2 m-2 c-2">
                             <div class="stastics__content__item">
-                                <img src="/asset/img/stastic_img1.webp" alt="Ảnh">
+                                <img src="../asset/img/stastic_img1.webp" alt="Ảnh">
                                 <div class="stastics__stats">
                                     <p>768</p>
                                     <span>Client</span>
@@ -229,7 +229,7 @@
                                     <p>145</p>
                                     <span>Client</span>
                                 </div>
-                                <img src="/asset/img/stastic_img1.webp" alt="Ảnh">
+                                <img src="../asset/img/stastic_img1.webp" alt="Ảnh">
                             </div>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                     <div class="row pd--18">
                         <div class="col l-2 m-2 c-2">
                             <div class="stastics__content__item">
-                                <img src="/asset/img/stastic_img1.webp" alt="Ảnh">
+                                <img src="../asset/img/stastic_img1.webp" alt="Ảnh">
                                 <div class="stastics__stats">
                                     <p>11546</p>
                                     <span>Client</span>
@@ -259,7 +259,7 @@
                                     <p>9321</p>
                                     <span>Client</span>
                                 </div>
-                                <img src="/asset/img/stastic_img1.webp" alt="Ảnh">
+                                <img src="../asset/img/stastic_img1.webp" alt="Ảnh">
                             </div>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
                     <div class="row pd--18">
                         <div class="col l-2 m-2 c-2">
                             <div class="stastics__content__item">
-                                <img src="/asset/img/stastic_img1.webp" alt="Ảnh">
+                                <img src="../asset/img/stastic_img1.webp" alt="Ảnh">
                                 <div class="stastics__stats">
                                     <p>3729</p>
                                     <span>Client</span>
@@ -289,7 +289,7 @@
                                     <p>17429</p>
                                     <span>Client</span>
                                 </div>
-                                <img src="/asset/img/stastic_img1.webp" alt="Ảnh">
+                                <img src="../asset/img/stastic_img1.webp" alt="Ảnh">
                             </div>
                         </div>
                     </div>
@@ -330,7 +330,7 @@
                         <div class="col l-3 m-6 c-12 mg__bt">
                             <div class="milestones__wp__item">
                                 <div class="milestones__wp__img">
-                                    <img src="/asset/img/sale__item1.webp" alt="">
+                                    <img src="../asset/img/sale__item1.webp" alt="">
                                 </div>
                                 <span>255</span>
                                 <p>CLIENT</p>
@@ -339,7 +339,7 @@
                         <div class="col l-3 m-6 c-12 mg__bt">
                             <div class="milestones__wp__item">
                                 <div class="milestones__wp__img">
-                                    <img src="/asset/img/sale__item2.webp" alt="">
+                                    <img src="../asset/img/sale__item2.webp" alt="">
                                 </div>
                                 <span>1176</span>
                                 <p>PROJECT</p>
@@ -348,7 +348,7 @@
                         <div class="col l-3 m-6 c-12 mg__bt">
                             <div class="milestones__wp__item">
                                 <div class="milestones__wp__img">
-                                    <img src="/asset/img/sale__item3.webp" alt="">
+                                    <img src="../asset/img/sale__item3.webp" alt="">
                                 </div>
                                 <span>39</span>
                                 <p>COUNTRIES</p>
@@ -357,7 +357,7 @@
                         <div class="col l-3 m-6 c-12 mg__bt">
                             <div class="milestones__wp__item">
                                 <div class="milestones__wp__img">
-                                    <img src="/asset/img/sale__item4.webp" alt="">
+                                    <img src="../asset/img/sale__item4.webp" alt="">
                                 </div>
                                 <span>127</span>
                                 <p>COFFEES</p>
