--- a/pages/about.html
+++ b/pages/about.html
@@ -177,7 +177,7 @@
                     <div class="row pd--18">
                         <div class="col l-2 m-2 c-2">
                             <div class="stastics__content__item">
-                                <img src="/asset/img/stastic_img1.webp" alt="Ảnh">
+                                <img src="../asset/img/stastic_img1.webp" alt="Ảnh">
                                 <div class="stastics__stats">
                                     <p>1642</p>
                                     <span>Client</span>
@@ -301,7 +301,7 @@
             <div class="grid wide">
                 <div class="sale__wp__content">
                     <div class="sale__wp__img">
-                        <img src="/asset/img/viajes-a-vietnam.webp" alt="Việt Nam" class="img__sale">
+                        <img src="../asset/img/viajes-a-vietnam.webp" alt="Việt Nam" class="img__sale">
                     </div>
                     <div class="sale__content">
                         <div class="sale__title">
