--- a/pages/contact.html
+++ b/pages/contact.html
@@ -151,7 +151,7 @@
 
                 <div class="row">
                     <div class="col l-5">
-                        <img src="/asset/img/contact__img__about.png" alt="">
+                        <img src="../asset/img/contact__img__about.png" alt="">
                     </div>
                     <div class="col l-4">
                         <a href="" class="header__logo-link">
