--- a/pages/offers.html
+++ b/pages/offers.html
@@ -342,7 +342,7 @@
                 <div class="wp__offers__content">
                     <div class="row mg__bt">
                         <div class="col l-4 m-6 c-12">
-                            <img src="/asset/img/offers_content1.webp" alt="" class="img__offers__content">
+                            <img src="../asset/img/offers_content1.webp" alt="" class="img__offers__content">
                             <div class="stickers">
                                 <a href="">grand castle</a>
                             </div>
@@ -385,7 +385,7 @@
                     </div>
                     <div class="row mg__bt">
                         <div class="col l-4 m-6 c-12">
-                            <img src="/asset/img/offers_content2.webp" alt="" class="img__offers__content">
+                            <img src="../asset/img/offers_content2.webp" alt="" class="img__offers__content">
                             <div class="stickers">
                                 <a href="">turkey hills</a>
                             </div>
@@ -429,7 +429,7 @@
 
                     <div class="row mg__bt">
                         <div class="col l-4 m-6 c-12">
-                            <img src="/asset/img/offers_content2.webp" alt="" class="img__offers__content">
+                            <img src="../asset/img/offers_content2.webp" alt="" class="img__offers__content">
                             <div class="stickers">
                                 <a href="">island dream</a>
                             </div>
@@ -473,7 +473,7 @@
 
                     <div class="row mg__bt">
                         <div class="col l-4 m-6 c-12">
-                            <img src="/asset/img/offers_content3.webp" alt="" class="img__offers__content">
+                            <img src="../asset/img/offers_content3.webp" alt="" class="img__offers__content">
                             <div class="stickers">
                                 <a href="">travel light</a>
                             </div>
@@ -517,7 +517,7 @@
 
                     <div class="row mg__bt">
                         <div class="col l-4 m-6 c-12">
-                            <img src="/asset/img/offers_content4.webp" alt="" class="img__offers__content">
+                            <img src="../asset/img/offers_content4.webp" alt="" class="img__offers__content">
                             <div class="stickers">
                                 <a href="">travel light</a>
                             </div>
