--- a/pages/news.html
+++ b/pages/news.html
@@ -57,7 +57,7 @@
                                         <ul class="header__nav-list">
                                             <li class="header__nav-item"><a href="index.html"
                                                     class="header__nav-link">HOME</a></li>
-                                            <li class="header__nav-item"><a href="pages/about.html"
+                                            <li class="header__nav-item"><a href="about.html"
                                                     class="header__nav-link">ABOUT</a></li>
                                             <li class="header__nav-item"><a href="offers.html"
                                                     class="header__nav-link">OFFERS</a></li>
