--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,7 +26,7 @@
                     <div class="header__topbar-container">
                         <div class="row">
                             <div class="col l-6 m-8 c-12">
-                                <span class="header__phone">+84 943 833 031</span>
+                                <span class="header__phone">+84 19001505</span>
                                 <a href=""><i class="fab fa-pinterest header__icon"></i></a>
                                 <a href=""><i class="fab fa-facebook-f header__icon"></i></a>
                                 <a href=""><i class="fab fa-twitter header__icon"></i></a>
@@ -300,7 +300,7 @@
                                 <div class="wp__img">
                                     <img src="../asset/img/phone.svg" alt="" class="img__contact">
                                 </div>
-                                <p>0943833031</p>
+                                <p>19001505</p>
                             </div>
                             <div class="wp__content__item">
                                 <div class="wp__img">
