--- a/pages/about.html
+++ b/pages/about.html
@@ -367,6 +367,31 @@
                 </div>
             </div>
         </div>
+
+        <!-- video  -->
+        <div class="grid wide">
+            <div class="statistics__title">
+                <h1>VIDEO DANH LAM THẮNG CẢNH</h1>
+            </div>
+            <div class="wp-video-item">
+                <iframe width="956" height="538" src="https://www.youtube.com/embed/pa65vbvd5dw"
+                    title="Top 10 địa điểm du lịch nổi tiếng nhất tại Kiên Giang" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="wp-video-item">
+                <iframe width="956" height="538" src="https://www.youtube.com/embed/__5mr_Xtb30"
+                    title="Phu Quoc Paradise Pearl Island - Vietnam Travel Guide | Flycam Tp Phú Quốc | Traveller"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+
+            
+       
+
+
         <footer class="footer">
             <div class="grid wide">
                 <div class="row">
