--- a/pages/about.html
+++ b/pages/about.html
@@ -373,18 +373,22 @@
             <div class="statistics__title">
                 <h1>VIDEO DANH LAM THẮNG CẢNH</h1>
             </div>
-            <div class="wp-video-item">
-                <iframe width="956" height="538" src="https://www.youtube.com/embed/pa65vbvd5dw"
-                    title="Top 10 địa điểm du lịch nổi tiếng nhất tại Kiên Giang" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+            <div class="row">
+                <div class="wp-video-item col l-12 l-o-1 c-12 m-12">
+                    <iframe width="956" height="538" src="https://www.youtube.com/embed/pa65vbvd5dw"
+                        title="Top 10 địa điểm du lịch nổi tiếng nhất tại Kiên Giang" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
-            <div class="wp-video-item">
-                <iframe width="956" height="538" src="https://www.youtube.com/embed/__5mr_Xtb30"
-                    title="Phu Quoc Paradise Pearl Island - Vietnam Travel Guide | Flycam Tp Phú Quốc | Traveller"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+            <div class="row">
+                <div class="wp-video-item col l-12 l-o-1 c-12 m-12">
+                    <iframe width="956" height="538" src="https://www.youtube.com/embed/__5mr_Xtb30"
+                        title="Phu Quoc Paradise Pearl Island - Vietnam Travel Guide | Flycam Tp Phú Quốc | Traveller"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
         </div>
 
