--- a/pages/index.html
+++ b/pages/index.html
@@ -49,7 +49,7 @@
                                         <a href="" class="header__logo-link">
                                             <div class="header__logo-img">
                                                 <img src="../asset/img/logo.webp" alt="Logo">
-                                                <h1>TRAVELIX</h1>
+                                                <h1>KGU TRAVELIX</h1>
                                             </div>
                                         </a>
                                     </div>
