--- a/pages/about.html
+++ b/pages/about.html
@@ -390,11 +390,16 @@
                         allowfullscreen></iframe>
                 </div>
             </div>
+            <div class="row mg__bt">
+                <div class="col l-12 c-12 m-12">
+                    <iframe class="video" src="https://www.youtube.com/embed/__5mr_Xtb30"
+                        title="Phu Quoc Paradise Pearl Island - Vietnam Travel Guide | Flycam Tp Phú Quốc | Traveller"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
-
-            
-       
-
 
         <footer class="footer">
             <div class="grid wide">
