--- a/pages/about.html
+++ b/pages/about.html
@@ -49,7 +49,7 @@
                                         <a href="" class="header__logo-link">
                                             <div class="header__logo-img">
                                                 <img src="../asset/img/logo.webp" alt="Logo">
-                                                <h1>TRAVELIX</h1>
+                                                <h1>KGU TRAVELIX</h1>
                                             </div>
                                         </a>
                                     </div>
@@ -371,19 +371,20 @@
         <!-- video  -->
         <div class="grid wide">
             <div class="statistics__title">
-                <h1>VIDEO DANH LAM THẮNG CẢNH</h1>
-            </div>
-            <div class="row">
-                <div class="wp-video-item col l-12 l-o-1 c-12 m-12">
-                    <iframe width="956" height="538" src="https://www.youtube.com/embed/pa65vbvd5dw"
-                        title="Top 10 địa điểm du lịch nổi tiếng nhất tại Kiên Giang" frameborder="0"
+                <h1>KIÊN GIANG TRAVELIX</h1>
+            </div>       
+            <div class="row mg__bt">
+                <div class="col l-12 c-12 m-12">
+                    <iframe class="video" src="https://www.youtube.com/embed/__5mr_Xtb30"
+                        title="Phu Quoc Paradise Pearl Island - Vietnam Travel Guide | Flycam Tp Phú Quốc | Traveller"
+                        frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
             </div>
-            <div class="row">
-                <div class="wp-video-item col l-12 l-o-1 c-12 m-12">
-                    <iframe width="956" height="538" src="https://www.youtube.com/embed/__5mr_Xtb30"
+            <div class="row mg__bt">
+                <div class="col l-12 c-12 m-12">
+                    <iframe class="video" src="https://www.youtube.com/embed/__5mr_Xtb30"
                         title="Phu Quoc Paradise Pearl Island - Vietnam Travel Guide | Flycam Tp Phú Quốc | Traveller"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
