--- a/pages/about.html
+++ b/pages/about.html
@@ -48,23 +48,23 @@
                                     <div class="col l-3 m-3 c-3">
                                         <a href="" class="header__logo-link">
                                             <div class="header__logo-img">
-                                                <img src="../asset/img/logo.webp" alt="Logo">
-                                                <h1>KGU TRAVELIX</h1>
+                                                <img src="../asset/img/Logo KGU TRAVEL.png" alt="Logo">
+                                                <h1>KGU TRAVEL</h1>
                                             </div>
                                         </a>
                                     </div>
                                     <div class="col l-6 m-0 c-0">
                                         <ul class="header__nav-list">
                                             <li class="header__nav-item"><a href="index.html"
-                                                    class="header__nav-link">HOME</a></li>
-                                            <li class="header__nav-item"><a href="pages/about.html"
-                                                    class="header__nav-link header__nav-link-active">ABOUT</a></li>
+                                                    class="header__nav-link">TRANG CHỦ</a></li>
+                                            <li class="header__nav-item"><a href="about.html"
+                                                    class="header__nav-link header__nav-link-active">GIỚI THIỆU</a></li>
                                             <li class="header__nav-item"><a href="offers.html"
-                                                    class="header__nav-link">OFFERS</a></li>
+                                                    class="header__nav-link">TOUR</a></li>
                                             <li class="header__nav-item"><a href="news.html"
-                                                    class="header__nav-link">NEWS</a></li>
+                                                    class="header__nav-link">TIN TỨC</a></li>
                                             <li class="header__nav-item"><a href="contact.html"
-                                                    class="header__nav-link">CONTACT</a>
+                                                    class="header__nav-link">CHĂM SÓC</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -89,11 +89,11 @@
                                 <i class="fa-solid fa-xmark icon__close--menu"></i>
                             </div>
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="offers.html">Offers</a></li>
-                                <li><a href="news.html">News</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="index.html" class="">Trang chủ</a></li>
+                                <li><a href="about.html">Giới thiệu</a></li>
+                                <li><a href="offers.html">Tour</a></li>
+                                <li><a href="news.html">Tin tức</a></li>
+                                <li><a href="contact.html">Chăm sóc</a></li>
                             </ul>
                         </div>
                     </div>
@@ -125,17 +125,29 @@
                     <div class="col l-5 m-12 c-12 custom">
                         <div class="wp__info">
                             <div class="wp__info__title">
-                                <h1>WE HAVE THE BEST TOURS</h1>
+                                <h1>DỰ ÁN KGU - TRAVEL</h1>
                             </div>
                             <div class="wp__detail">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vulputate eros,
-                                    iaculis consequat nisl. Nunc et suscipit urna. Integer elementum orci eu vehicula
-                                    pretium. Donec bibendum tristique condimentum. Aenean in lacus ligula. Phasellus
-                                    euismod
-                                    gravida eros. Aenean nec ipsum aliquet, pharetra magna id, interdum sapien. Etiam id
-                                    lorem eu nisl pellentesque semper. Nullam tincidunt metus placerat, suscipit leo ut,
-                                    tempus nulla. Fusce at eleifend tellus. Ut eleifend dui nunc, non fermentum quam
-                                    placerat non. Etiam venenatis nibh augue, sed eleifend justo tristique eu</p>
+                                <p>Đây là dịch vụ kinh doanh du lịch kết hợp với lĩnh vực giáo dục hoàn toàn mới chưa
+                                    có trên thị trường.
+                                    Dự án được mang tên là KGU TRAVEL hiện tại dự án chỉ mới là ý tưởng nhưng nhóm tin
+                                    rằng ý tưởng này sẽ được thành hiện thực vì tính cấp thiết của nó sẽ làm thay đổi
+                                    đến chất lượng giáo dục của môi trường đại học. Đối với dự án khởi nghiệp KGU TRAVEL
+                                    của nhóm hướng đến nhằm giải quyết các vấn đề về công tác học tập sinh viên và
+                                    nghiên cứu khoa học của nhà trường, thấy được sự bất cập của nhà trường về vấn đề đó
+                                    là phải kết nối các công ty kinh doanh du lịch tư nhân ở ngoài trường để phục vụ các
+                                    nhu cầu như sinh viên đi thực tế, các đoàn khoa đi về nguồn, sinh viên và giảng viên
+                                    có nhu cầu đi du lịch nhưng giá thành lại cao không phù hợp với mức thu nhập của cá
+                                    nhân chính vì thế KGU TRAVEL xuất hiện nhằm giải quyết các bài toán ấy. Đặt biệt
+                                    giải quyết vấn đề thực tập của sinh viên ngành du lịch của trường Đại học Kiên Giang
+                                    nói riêng và các trường Đại học trên toàn quốc nói chung khi tham gia dịch vụ của
+                                    KGU TRAVEL thì sẽ được sinh viên của nhà trường hướng dẫn và đây là nét đặc trương
+                                    riêng của dự án, khách hàng chủ yếu là đội ngủ cán bộ của trường và sinh viên chính
+                                    vì thế sẽ được trải nghiệm xem sinh viên du lịch của trường được đào tạo và học tập
+                                    như thế nào. Dự án KGU TRAVEL sẽ gải quyết được vấn đề việc làm của sinh viên đang
+                                    theo học ngành du lịch sau khi ra trường mang lại cộng đồng và xã hội một hình thức
+                                    kinh doanh du lịch mới đó là du lịch kết hợp với lĩnh vực giáo dục.
+                                </p>
                             </div>
                             <div class="btn__hover">
                                 <div class="btn__hover__bg"></div>
@@ -372,7 +384,7 @@
         <div class="grid wide">
             <div class="statistics__title">
                 <h1>KIÊN GIANG TRAVELIX</h1>
-            </div>       
+            </div>
             <div class="row mg__bt">
                 <div class="col l-12 c-12 m-12">
                     <iframe class="video" src="https://www.youtube.com/embed/__5mr_Xtb30"
@@ -408,14 +420,15 @@
                     <div class="col l-3 m-6 c-12">
                         <a href="" class="header__logo-link">
                             <div class="header__logo-img">
-                                <img src="../asset/img/logo.webp" alt="Logo">
+                                <img src="../asset/img/Logo KGU TRAVEL.png" alt="Logo">
                                 <h1>TRAVELIX</h1>
                             </div>
                         </a>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vu lputate eros,
-                            iaculis
-                            consequat nisl. Nunc et suscipit urna. Integer eleme ntum orci eu vehicula pretium.
+                            Dịch vụ Du Lịch - Giáo Dục
+                        </p>
+                        <p>
+                            Đồng hành cùng những chuyến đi
                         </p>
                         <div class="footer__wp__icon">
                             <a href=""><i class="fab fa-pinterest footer__icon"></i></a>
@@ -427,8 +440,8 @@
                         </div>
                     </div>
                     <div class="col l-3 m-6 c-12">
-                        <h3 class="footer__row__blog footer__row__title">BLOG POST</h3>
-                        <div class="footer__blog__item">
+                        <h3 class="footer__row__blog footer__row__title">DỊCH VỤ</h3>
+                        <!-- <div class="footer__blog__item">
                             <div class="img__blog">
                                 <img src="../asset/img/blog1.webp" alt="">
                             </div>
@@ -460,10 +473,17 @@
                                     <p>July 20, 2022</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+                        <ul class="list_content_travel">
+                            <li>Tour trong tỉnh</li>
+                            <li>Tour ngoài tỉnh</li>
+                            <li>Thuê xe</li>
+                            <li>Vé Máy bay</li>
+                            <li>Trải nghiệm thực tế</li>
+                        </ul>
                     </div>
                     <div class="col l-3 m-6 c-12">
-                        <h3 class="footer__row__tags footer__row__title">BLOG POST</h3>
+                        <h3 class="footer__row__tags footer__row__title">BÀI VIẾT</h3>
                         <div class="wp__content__tags">
                             <ul class="tags__list">
                                 <li class="tags__item"><a href="">design</a></li>
@@ -478,19 +498,19 @@
                         </div>
                     </div>
                     <div class="col l-3 m-6 c-12">
-                        <h3 class="footer__row__contact footer__row__title">CONTACT INFO</h3>
+                        <h3 class="footer__row__contact footer__row__title">LIÊN HỆ</h3>
                         <div class="wp__content">
                             <div class="wp__content__item">
                                 <div class="wp__img">
                                     <img src="../asset/img/address.svg" alt="" class="img__contact">
                                 </div>
-                                <p>U Minh Thượng - Kiên Giang</p>
+                                <p>Số 320A - T.T Minh Lương - Châu Thành - Kiên Giang</p>
                             </div>
                             <div class="wp__content__item">
                                 <div class="wp__img">
                                     <img src="../asset/img/email.svg" alt="" class="img__contact">
                                 </div>
-                                <p>nvothanh00@gmail.com</p>
+                                <p>kgutravel@gmail.com</p>
                             </div>
                             <div class="wp__content__item">
                                 <div class="wp__img">
@@ -502,13 +522,13 @@
                                 <div class="wp__img">
                                     <img src="../asset/img/earth.svg" alt="" class="img__contact">
                                 </div>
-                                <p>http://thanhthattha.com</p>
+                                <p>http://kgutravel.edu.vn</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="note_text">Copyright © 2022 By <span>Nguyen Vo Thanh</span></div>
+            <div class="note_text">Copyright © 2022 Team <span>KGU TRAVEL</span></div>
 
         </footer>
         <!-- Backtop -->
