--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,23 +48,23 @@
                                     <div class="col l-3 m-3 c-3">
                                         <a href="" class="header__logo-link">
                                             <div class="header__logo-img">
-                                                <img src="../asset/img/logo.webp" alt="Logo">
-                                                <h1>KGU TRAVELIX</h1>
+                                                <img src="../asset/img/Logo KGU TRAVEL.png" alt="Logo">
+                                                <h1>KGU TRAVEL</h1>
                                             </div>
                                         </a>
                                     </div>
                                     <div class="col l-6 m-0 c-0">
                                         <ul class="header__nav-list">
                                             <li class="header__nav-item"><a href="index.html"
-                                                    class="header__nav-link">HOME</a></li>
-                                            <li class="header__nav-item"><a href="pages/about.html"
-                                                    class="header__nav-link">ABOUT</a></li>
+                                                    class="header__nav-link">TRANG CHỦ</a></li>
+                                            <li class="header__nav-item"><a href="about.html"
+                                                    class="header__nav-link ">GIỚI THIỆU</a></li>
                                             <li class="header__nav-item"><a href="offers.html"
-                                                    class="header__nav-link">OFFERS</a></li>
+                                                    class="header__nav-link ">TOUR</a></li>
                                             <li class="header__nav-item"><a href="news.html"
-                                                    class="header__nav-link ">NEWS</a></li>
+                                                    class="header__nav-link">TIN TỨC</a></li>
                                             <li class="header__nav-item"><a href="contact.html"
-                                                    class="header__nav-link header__nav-link-active">CONTACT</a>
+                                                    class="header__nav-link header__nav-link-active">CHĂM SÓC</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -89,11 +89,11 @@
                                 <i class="fa-solid fa-xmark icon__close--menu"></i>
                             </div>
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="offers.html">Offers</a></li>
-                                <li><a href="news.html">News</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="index.html" class="">Trang chủ</a></li>
+                                <li><a href="about.html">Giới thiệu</a></li>
+                                <li><a href="offers.html">Tour</a></li>
+                                <li><a href="news.html">Tin tức</a></li>
+                                <li><a href="contact.html">Chăm sóc</a></li>
                             </ul>
                         </div>
                     </div>
@@ -212,14 +212,15 @@
                     <div class="col l-3 m-6 c-12">
                         <a href="" class="header__logo-link">
                             <div class="header__logo-img">
-                                <img src="../asset/img/logo.webp" alt="Logo">
+                                <img src="../asset/img/Logo KGU TRAVEL.png" alt="Logo">
                                 <h1>TRAVELIX</h1>
                             </div>
                         </a>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vu lputate eros,
-                            iaculis
-                            consequat nisl. Nunc et suscipit urna. Integer eleme ntum orci eu vehicula pretium.
+                            Dịch vụ Du Lịch - Giáo Dục
+                        </p>
+                        <p>
+                            Đồng hành cùng những chuyến đi
                         </p>
                         <div class="footer__wp__icon">
                             <a href=""><i class="fab fa-pinterest footer__icon"></i></a>
@@ -231,8 +232,8 @@
                         </div>
                     </div>
                     <div class="col l-3 m-6 c-12">
-                        <h3 class="footer__row__blog footer__row__title">BLOG POST</h3>
-                        <div class="footer__blog__item">
+                        <h3 class="footer__row__blog footer__row__title">DỊCH VỤ</h3>
+                        <!-- <div class="footer__blog__item">
                             <div class="img__blog">
                                 <img src="../asset/img/blog1.webp" alt="">
                             </div>
@@ -264,10 +265,17 @@
                                     <p>July 20, 2022</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+                        <ul class="list_content_travel">
+                            <li>Tour trong tỉnh</li>
+                            <li>Tour ngoài tỉnh</li>
+                            <li>Thuê xe</li>
+                            <li>Vé Máy bay</li>
+                            <li>Trải nghiệm thực tế</li>
+                        </ul>
                     </div>
                     <div class="col l-3 m-6 c-12">
-                        <h3 class="footer__row__tags footer__row__title">BLOG POST</h3>
+                        <h3 class="footer__row__tags footer__row__title">BÀI VIẾT</h3>
                         <div class="wp__content__tags">
                             <ul class="tags__list">
                                 <li class="tags__item"><a href="">design</a></li>
@@ -282,19 +290,19 @@
                         </div>
                     </div>
                     <div class="col l-3 m-6 c-12">
-                        <h3 class="footer__row__contact footer__row__title">CONTACT INFO</h3>
+                        <h3 class="footer__row__contact footer__row__title">LIÊN HỆ</h3>
                         <div class="wp__content">
                             <div class="wp__content__item">
                                 <div class="wp__img">
                                     <img src="../asset/img/address.svg" alt="" class="img__contact">
                                 </div>
-                                <p>U Minh Thượng - Kiên Giang</p>
+                                <p>Số 320A - T.T Minh Lương - Châu Thành - Kiên Giang</p>
                             </div>
                             <div class="wp__content__item">
                                 <div class="wp__img">
                                     <img src="../asset/img/email.svg" alt="" class="img__contact">
                                 </div>
-                                <p>nvothanh00@gmail.com</p>
+                                <p>kgutravel@gmail.com</p>
                             </div>
                             <div class="wp__content__item">
                                 <div class="wp__img">
@@ -306,13 +314,13 @@
                                 <div class="wp__img">
                                     <img src="../asset/img/earth.svg" alt="" class="img__contact">
                                 </div>
-                                <p>http://thanhthattha.com</p>
+                                <p>http://kgutravel.edu.vn</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="note_text">Copyright © 2022 By <span>Nguyen Vo Thanh</span></div>
+            <div class="note_text">Copyright © 2022 Team <span>KGU TRAVEL</span></div>
 
         </footer>
         <!-- Backtop -->
